--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Jul 28 10:03:58 PYT 2022
-sdk.dir=C\:\\Users\\USUARIO\\AppData\\Local\\Android\\Sdk
+#Fri Jan 27 18:24:34 PYST 2023
+sdk.dir=C\:\\Users\\Matias\\AppData\\Local\\Android\\Sdk
