--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,11 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.0-alpha02'
     implementation 'com.makeramen:roundedimageview:2.3.0'
 
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
+
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+
+    implementation 'androidx.navigation:navigation-fragment:2.3.5'
+    implementation 'androidx.navigation:navigation-ui:2.3.5'
+
 }
