--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Mar 01 18:54:25 PYST 2023
-sdk.dir=C\:\\Users\\Matias\\AppData\\Local\\Android\\Sdk
+#Thu Jul 06 07:28:49 PYT 2023
+sdk.dir=C\:\\Users\\USUARIO\\AppData\\Local\\Android\\Sdk
