--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         android:theme="@style/Theme.DrawerSliding"
         tools:targetApi="31">
         <activity
+            android:name=".RecuperarActivity"
+            android:exported="false" />
+        <activity
             android:name=".verificacion_phone"
             android:exported="false" />
         <activity
@@ -38,10 +41,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-<meta-data
-    android:name="com.google.android.geo.API_KEY"
-    android:value="AIzaSyADe0uOkf2JrmXUt4nsh0BLYojVhVKBJ7g"
-    />
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyADe0uOkf2JrmXUt4nsh0BLYojVhVKBJ7g" />
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
