--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,27 +38,39 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.yarolegovich:sliding-root-nav:1.1.1'
     testImplementation 'junit:junit:4.13.2'
-    implementation 'com.squareup.picasso:picasso:2.8'
+    implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.google.firebase:firebase-database'
     implementation 'com.github.Spikeysanju:MotionToast:1.4'
     implementation 'com.google.firebase:firebase-analytics'
-    implementation platform('com.google.firebase:firebase-bom:32.1.1')
+    implementation platform('com.google.firebase:firebase-bom:32.2.3')
     implementation 'com.google.firebase:firebase-auth'
-    implementation 'com.google.android.gms:play-services-auth:20.6.0'
+    implementation 'com.google.android.gms:play-services-auth:20.7.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    implementation 'com.sun.mail:android-mail:1.6.6'
+    implementation 'com.sun.mail:android-mail:1.6.7'
     implementation 'com.sun.mail:android-activation:1.6.7'
     implementation 'com.github.ybq:Android-SpinKit:1.4.0'
-    implementation 'com.google.android.material:material:1.10.0-alpha04'
+    implementation 'com.google.android.material:material:1.11.0-alpha02'
     implementation 'com.makeramen:roundedimageview:2.3.0'
-    implementation 'androidx.browser:browser:1.5.0'
+    implementation 'androidx.browser:browser:1.6.0'
     implementation 'com.google.android.gms:play-services-location:21.0.1'
 
-    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
 
-    implementation 'androidx.navigation:navigation-fragment:2.6.0'
-    implementation 'androidx.navigation:navigation-ui:2.6.0'
+    implementation 'androidx.navigation:navigation-fragment:2.7.1'
+    implementation 'androidx.navigation:navigation-ui:2.7.1'
 
+    ///paypal
+    implementation('com.paypal.checkout:android-sdk:1.1.0')
+
+    implementation 'com.paypal.sdk:paypal-android-sdk:2.16.0'
+
+    ///volley
+    implementation 'com.android.volley:volley:1.2.1'
 }
+
+
+
+
+//}
