--- a/settings.gradle
+++ b/settings.gradle
@@ -12,6 +12,14 @@ dependencyResolutionManagement {
         jcenter()
         maven { url "https://jitpack.io" }
         mavenCentral()
+        maven {
+            url  "https://cardinalcommerceprod.jfrog.io/artifactory/android"
+            credentials {
+
+                username "paypal_sgerritz"
+                password "AKCp8jQ8tAahqpT5JjZ4FRP2mW7GMoFZ674kGqHmupTesKeAY2G8NcmPKLuTxTGkKjDLRzDUQ"
+            }
+        }
     }
 }
 rootProject.name = "Drawer Sliding"
