--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
 
     defaultConfig {
         applicationId "com.foysaltech.drawersliding"
-        minSdk 26
+        minSdk 29
         targetSdk 34
         versionCode 1
         versionName "1.0"
@@ -64,10 +64,17 @@ dependencies {
     ///paypal
     implementation('com.paypal.checkout:android-sdk:1.1.0')
 
-    implementation 'com.paypal.sdk:paypal-android-sdk:2.16.0'
 
     ///volley
     implementation 'com.android.volley:volley:1.2.1'
+
+
+
+
+
+    implementation 'com.loopj.android:android-async-http:1.4.11'
+    implementation "androidx.browser:browser:1.3.0"
+
 }
 
 
